--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .button {
-    background-color: red;
+    background-color: white;
     color: white;
     border: none;
     padding: 10px 20px;
